--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,11 +8,11 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+      #- title: "Talks"
+      #url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Study Notes"
+    url: /studynotes/    
     
   - title: "Portfolio"
     url: /portfolio/
