--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
 main:
   - title: "Publications"
     url: /publications/
-
+    # url: <google scholar>
       #- title: "Talks"
       #url: /talks/    
 
@@ -21,7 +21,8 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    # url: /cv/
+    url: /files/cv_YangLiu.pdf
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
