--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,8 @@
 
 main:
   - title: "Publications"
-    url: /publications/
+    # url: /publications/
+    url: https://scholar.google.com/citations?user=qE5357gAAAAJ&hl=en&oi=sra
     # url: <google scholar>
       #- title: "Talks"
       #url: /talks/    
@@ -17,8 +18,8 @@ main:
   - title: "Portfolio"
     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
   - title: "CV"
     # url: /cv/
